<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTekton"
    tools:context=".sdk.compatibility.orange_compatibility.view.activities.AutoSettingsMenuActivity">

    <ImageView
        android:id="@+id/tutorialBackgroundTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backgroundImageHeightSmall"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/img_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/autoSettingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:layout_marginTop="@dimen/marginStandard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tutorialTitleTextView"
                style="@style/PagaPhone.TextAppearance.TextView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/act_settings_validation_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="412dp"
        android:layout_height="585dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/autoSettingsGoToBackTextView"
        app:layout_constraintTop_toBottomOf="@+id/tutorialBackgroundTop"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/autoSettingsGoToValidateIMEILinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@color/whiteTekton"
                    android:elevation="3dp"
                    android:src="@drawable/icon_numeric_keyboard" />

                <TextView
                    android:layout_width="294dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/act_tutorial_go_to_imei_title"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/autoSettingsGoToVolteTutorialLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="254dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/act_tutorial_go_to_volte_title"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:background="@color/whiteTekton"
                    android:elevation="3dp"
                    android:src="@drawable/icon_tutorials" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/autoSettingsGoToDataTutorialLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="254dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/act_tutorial_go_to_data_title"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:background="@color/whiteTekton"
                    android:elevation="3dp"
                    android:src="@drawable/icon_tutorials" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/autoSettingsGoToRoamingTutorialLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="254dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/act_tutorial_go_to_roaming_title"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:background="@color/whiteTekton"
                    android:elevation="3dp"
                    android:src="@drawable/icon_tutorials" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/autoSettingsGoToAPNTutorialLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="254dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/act_tutorial_go_to_apn_title"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:background="@color/whiteTekton"
                    android:elevation="3dp"
                    android:src="@drawable/icon_tutorials" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/autoSettingsGoToValidateLineButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:minWidth="110dp"
                    android:text="@string/act_tutorial_go_to_validate_line_status_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <TextView
        android:id="@+id/autoSettingsGoToBackTextView"
        style="@style/PagaPhone.Widget.TextView.Form.Action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonSizeNormal"
        android:drawablePadding="@dimen/marginXSmall"
        android:gravity="center"
        android:paddingStart="@dimen/marginXSmall"
        android:paddingEnd="@dimen/marginXSmall"
        android:text="Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.998" />
</androidx.constraintlayout.widget.ConstraintLayout>