<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTekton"
    android:id="@+id/frameLayoutRoot"
    tools:context=".sdk.compatibility.orange_compatibility.view.activities.AutoSettingsMenuActivity">

    <ImageView
        android:id="@+id/tutorialBackgroundTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/backgroundImageHeightSmall"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/img_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/autoSettingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:layout_marginTop="@dimen/marginStandard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tutorialTitleTextView"
                style="@style/PagaPhone.TextAppearance.TextView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/act_tutorial_go_to_validate_line_status_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="412dp"
        android:layout_height="585dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/autoSettingsGoToBackTextView"
        app:layout_constraintTop_toBottomOf="@+id/tutorialBackgroundTop"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/PagaPhone.Widget.TextView.Form"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonSizeNormal"
                android:layout_marginStart="@dimen/marginNormal"
                android:layout_marginTop="@dimen/marginSmall"
                android:layout_marginEnd="@dimen/marginNormal"
                android:text="@string/act_phone_number"
                ></TextView>

            <EditText
                android:id="@+id/phoneNumberEditText"
                style="@style/PagaPhone.Widget.EditText.Form.Tekton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonSizeNormal"
                android:layout_marginStart="@dimen/marginNormal"
                android:layout_marginEnd="@dimen/marginNormal"
                android:layout_marginTop="@dimen/marginSmall"
                android:gravity="center_vertical"
                android:hint="@string/act_phone_number"
                android:inputType="phone"
                android:maxLength="12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:met_mask="@string/phone_mask"
                >

            </EditText>


            <TextView
                android:id="@+id/phoneErrorMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Este campo es obligatorio"
                android:layout_marginStart="@dimen/marginNormal"
                android:layout_marginEnd="@dimen/marginNormal"
                style="@style/PagaPhone.TextAppearance.TextView.Form.Error"
                android:visibility="gone"
                >

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="@dimen/marginNormal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/autoSettingsGoToRequestOTPButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:minWidth="110dp"
                    android:text="@string/act_send_otp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/autoSettingsGoToDataTutorialLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/PagaPhone.Widget.TextView.Form"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttonSizeNormal"
                    android:layout_marginStart="@dimen/marginNormal"
                    android:layout_marginTop="@dimen/marginSmall"
                    android:layout_marginEnd="@dimen/marginNormal"
                    android:text="@string/act_otp_description"
                    ></TextView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/otpInputsLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:enabled="false"
                    android:cursorVisible="false"
                    android:imeOptions="actionNone"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:id="@+id/editTextOne"
                    android:textStyle="bold"
                    android:textSize="15pt"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/otp_item_bg"
                    />

                <EditText
                    android:layout_marginStart="10dp"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:enabled="false"
                    android:cursorVisible="false"
                    android:imeOptions="actionNone"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:id="@+id/editTextTwo"
                    android:textStyle="bold"
                    android:textSize="15pt"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/otp_item_bg"
                    />

                <EditText
                    android:layout_marginStart="10dp"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:enabled="false"
                    android:cursorVisible="false"
                    android:imeOptions="actionNone"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:id="@+id/editTextThree"
                    android:textStyle="bold"
                    android:textSize="15pt"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/otp_item_bg"
                    />

                <EditText
                    android:layout_marginStart="10dp"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:enabled="false"
                    android:cursorVisible="false"
                    android:imeOptions="actionNone"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:id="@+id/editTextFour"
                    android:textStyle="bold"
                    android:textSize="15pt"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/otp_item_bg"
                    />

                <EditText
                    android:layout_marginStart="10dp"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:enabled="false"
                    android:cursorVisible="false"
                    android:imeOptions="actionNone"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:id="@+id/editTextFive"
                    android:textStyle="bold"
                    android:textSize="15pt"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/otp_item_bg"
                    />

                <EditText
                    android:layout_marginStart="10dp"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:enabled="false"
                    android:cursorVisible="false"
                    android:imeOptions="actionNone"
                    android:maxLength="1"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:id="@+id/editTextSix"
                    android:textStyle="bold"
                    android:textSize="15pt"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/black"
                    android:background="@drawable/otp_item_bg"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/autoSettingsGoToAPNTutorialLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/requestOTPTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/act_request_new_opt"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/marginNormal"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/validateStatusLineButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:minWidth="110dp"
                    android:text="@string/act_tutorial_go_to_validate_line_status_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <TextView
        android:id="@+id/autoSettingsGoToBackTextView"
        style="@style/PagaPhone.Widget.TextView.Form.Action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonSizeNormal"
        android:drawablePadding="@dimen/marginXSmall"
        android:gravity="center"
        android:paddingStart="@dimen/marginXSmall"
        android:paddingEnd="@dimen/marginXSmall"
        android:text="Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.998" />
</androidx.constraintlayout.widget.ConstraintLayout>